tests/common/centraldashboard/overlays/stacks/test_data/expected/apps_v1_deployment_centraldashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: centraldashboard
    app.kubernetes.io/component: centraldashboard
    app.kubernetes.io/instance: centraldashboard-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: centraldashboard
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
  name: centraldashboard
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: centraldashboard
      app.kubernetes.io/component: centraldashboard
      app.kubernetes.io/instance: centraldashboard-v1.0.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: centraldashboard
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v1.0.0
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: centraldashboard
        app.kubernetes.io/component: centraldashboard
        app.kubernetes.io/instance: centraldashboard-v1.0.0
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: centraldashboard
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: v1.0.0
    spec:
      containers:
      - env:
        - name: USERID_HEADER
          valueFrom:
            configMapKeyRef:
              key: userid-header
              name: kubeflow-config
        - name: USERID_PREFIX
          valueFrom:
            configMapKeyRef:
              key: userid-prefix
              name: kubeflow-config
        - name: PROFILES_KFAM_SERVICE_HOST
          valueFrom:
            configMapKeyRef:
              key: profiles_kfam_service_host
              name: kubeflow-config
        image: gcr.io/kubeflow-images-public/centraldashboard
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 30
        name: centraldashboard
        ports:
        - containerPort: 8082
          protocol: TCP
      serviceAccountName: centraldashboard
